# manifest-tool

./: Cargo.toml  README.md
git_repo_manifest/: Cargo.toml
git_repo_manifest/src/: lib.rs  test.rs
git_repo_manifest/src/snapshots/: git_repo_manifest__test__run_test_inputs@agit_local_manifest.xml.snap  git_repo_manifest__test__run_test_inputs@camkes_vm_manifest.xml.snap  git_repo_manifest__test__run_test_inputs@default.xml.snap  git_repo_manifest__test__run_test_inputs@remybohmer.default.xml.snap  git_repo_manifest__test__run_test_inputs@server_settings.xml.snap  repo_manifest__test__run_test_inputs@camkes_vm_manifest.xml.snap  repo_manifest__test__run_test_inputs@server_settings.xml.snap
git_repo_manifest/src/test_inputs/: agit_local_manifest.xml  camkes_vm_manifest.xml  input_sources.txt
src/: main.rs
