[package]
name = "git_repo_manifest"
version = "0.1.0"
authors = ["matt rice <ratmice@gmail.com>"]
description = "xml deserialization structures for git-repo manifest.xml files"
edition = "2018"

[dependencies]
derive-getters = "0.2.0"
derive-new = "0.5.8"
quick-error = "2.0.0"
quick-xml = {version = "0.20.0", features=["serialize"]}
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
insta = {version = "1.1.0", features=["glob"]}
